# ARCSim-ImGUI

./: .gitignore  CMakeLists.txt
AdaptiveCloth/: Application.cpp  Application.h  CMakeLists.txt  ConvergenceChecker.cpp  ConvergenceChecker.h  Main.cpp  Simulation.cpp  Simulation.hpp  StripSimulation.cpp  StripSimulation.hpp  StripSynthesis.cpp  StripSynthesis.hpp  auglag.hpp  bvh.cpp  cloth.cpp  cloth.hpp  collision.cpp  conf.cpp  conf.hpp  constraint.cpp  dde.cpp  dde.hpp  display.cpp  display.hpp  dynamicremesh.cpp  geometry.cpp  geometry.hpp  handle.cpp  io.cpp  io.hpp  magic.hpp  mesh.cpp  mesh.hpp  mot_parser.hpp  new_main.cpp  optimization.hpp  physics.cpp  plasticity.cpp  popfilter.cpp  proximity.cpp  (+11 more)
AdaptiveCloth/archive/: display.cpp
Materials/: xudong_drap.json
archive/conf/: fold.json
conf/: drape.json  strip.json  two_tris.json  xudong_drap.json
scripts/: arctanc_deriv.py  dihedral.py  hello.txt  normalized_vector_deriv.py  skew.py
utils/: CMakeLists.txt
utils/json/: CMakeLists.txt
